# libqi-python

./: .gitignore  conanfile.py  pyproject.toml
.github/workflows/: build_wheel.yml
ci/: cibuildwheel_before_all.sh  cibuildwheel_linux_before_all.sh
ci/conan/: global.conf
